--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -16,8 +16,10 @@
   <body>
     <body background="/webclient/assets/img/app-nea-def.png">	
 	
-    <h1>Welcome to App-nea platform!</h1>
-	
+    <h1>Welcome to App-nea platform (BETA)!</h1>
+	<h2>App-nea is a social freediving logbook for freediver.
+<h2>Save your performance in the cloud and share it with your friends.</h2>
+<h2>Use your Facebook account to login.</h2>
     <table>
       <tr>
         <td colspan="2" style="font-weight:bold;">Available links</td>        
@@ -26,7 +28,7 @@
         <td><a href="https://docs.google.com/document/d/1R5_QRElu40hTb6ErLYQW1fbh7MSRgfpP-Fmz8yEmnk8/pub">App-nea rest API documentation</a></td>
       </tr>
       <tr>
-        <td><a href="/webclient/index.html">App-nea web client</a></td>
+        <td><a href="/webclient/index.html">App-nea web client (beta)</a> Plaese <a href="mailto:gianluca.ragnoni@gmail.com">Contact me</a> if you want to try the client!</td>
       </tr>
     </table>
    
