Optimized card for help and some bugfixes on dive duration attribute

--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -132,7 +132,7 @@
     <md-tab label="Dives">
     <md-content flex>
         <!-- show dive list or a card depending of the number of dives in dive session -->
-        <md-list ng-show="divesession.dives >0">
+        <md-list ng-show="divesession.dives.length > 0">
             <md-list-item class="md-3-line" ng-repeat="dive in divesession.dives | orderBy : '-diveTime'" ng-click="showDiveDetail(dive)">
                 <img ng-src="assets/img/twitter_diver.png" class="md-avatar" alt="diver">
                 <div layout="column" class="md-list-item-text">
@@ -148,7 +148,7 @@
             </md-list-item>
         </md-list>
         
-        <md-card ng-show="divesession.dives <= 0" layout-align="center center">
+        <md-card ng-show="divesession.dives.length <= 0" layout-align="center center">
             <img src="assets/img/no_dive_en.jpg" class="md-card-image" alt="no dive">            
         </md-card>
   
