Added indexing info for SEO, restyled login button with fb version

--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -1,5 +1,18 @@
 <html ng-app="appNeaClient">
     <head>
+        <!-- search engine indexing -->
+        <title>appnea, the first social logbook for freediver </title>
+        <meta name="description" content="appnea, the first social logbook for freediver. Store your performance and share them with your friends" />
+        <meta name="keywords" content="apnea, freediving, freediver, aida, apnea academy, ssi, immersioni, depth, pescasub, subacquea, profondità, logbook, registro, freediver logbook, freediving logbook, performance, prestazioni">
+        <meta name="author" content="Gianluca Ragnoni" />
+        <meta name="copyright" content="" />
+        <meta http-equiv="Reply-to" content="freediving.logbook@gmail.com" />
+        <meta http-equiv="content-language" content="EN,IT" />
+        <meta http-equiv="Content-Type" content="text/html; iso-8859-1" />
+        <meta name="robots" content="INDEX,FOLLOW" />
+        <meta name="creation_Date" content="01/05/2016" />
+        <meta name="revisit-after" content="7 days" />
+        
         <meta name="viewport" content="width=device-width" content="initial-scale=1" />
         <!-- Angular Material CSS now available via Google CDN; version 0.11.4 used here -->
         <!--link rel="stylesheet" href="assets/libs/angular-material/angular-material.min.css"-->
