--- a/Server-side/war/webclient/src/divesession/divesession_list_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_list_view.html
@@ -11,11 +11,11 @@
             <p>{{applicationName}}</p>
 
             <!--Inlclude fb button taht will show/hide respect user status --> 
-            <!--md-button ng-show="fbStatus != 0"><div  class="fb-login-button" data-max-rows="1" data-size="small" data-show-faces="false" data-auto-logout-link="true"></div></md-button-->
-            <md-button class="md-icon-button" aria-label="login" ng-show="fbStatus != 0" ng-click="login()">
-                <!--md-icon flex md-font-set="material-icons">person</md-icon-->
+            <md-button ng-show="fbStatus != 0"><div  class="fb-login-button" data-max-rows="1" data-size="small" data-show-faces="false" data-auto-logout-link="true"></div></md-button>
+            <!--md-button class="md-icon-button" aria-label="login" ng-show="fbStatus != 0" ng-click="login()">
+                
                 <md-icon flex md-svg-src="assets/img/facebook3.svg"></md-icon>
-            </md-button>
+            </md-button-->
             <!--fill right space with a blank div -->
             <div ng-show="fbStatus == 0" style="height:48px; width:48px"></div>
             
