Start integrate ngFacebook

--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -38,6 +38,9 @@
         <script src="assets/libs/moment-picker/angular-moment-picker_app-nea_patch.js"></script>
         <link href="assets/libs/moment-picker/angular-moment-picker.min.css" rel="stylesheet">
         
+        <!--ngFacebook dependecy -->
+        <script src="assets/libs/ng-facebook/ngFacebook.js"></script>
+        
         <!-- app-nea source code reference -->    
         <script src="src/app.js"></script> 
         <script src="src/shared/constant.js"></script>
