Bugs on login facebook fixed!

--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -3,12 +3,13 @@
         <!-- search engine indexing -->
         <title>appnea, the first social logbook for freediver </title>
         <meta name="description" content="appnea, the first social logbook for freediver. Store your performance and share them with your friends" />
-        <meta name="keywords" content="apnea, freediving, freediver, aida, apnea academy, ssi, immersioni, depth, pescasub, subacquea, profondità, logbook, registro, freediver logbook, freediving logbook, performance, prestazioni">
+        <meta name="keywords" content="apnea, freediving, freediver, aida, apnea academy, ssi, immersioni, depth, pescasub, subacquea, profondità, logbook, registro, freediver logbook, freediving logbook, performance, prestazioni, aida logbook, aida registro, logbook freediver, logbook apnea, apnea logbook">
         <meta name="author" content="Gianluca Ragnoni" />
         <meta name="copyright" content="" />
         <meta http-equiv="Reply-to" content="freediving.logbook@gmail.com" />
         <meta http-equiv="content-language" content="EN,IT" />
         <meta http-equiv="Content-Type" content="text/html; iso-8859-1" />
+        <meta charset="iso-8859-1" />
         <meta name="robots" content="INDEX,FOLLOW" />
         <meta name="creation_Date" content="01/05/2016" />
         <meta name="revisit-after" content="7 days" />
