--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -60,8 +60,8 @@
             <md-button aria-label="menu...." class="md-fab"> <md-icon flex md-font-set="material-icons">reorder</md-icon></md-icon></md-button>
         </md-fab-trigger>
         <md-fab-actions-->
-            <md-button aria-label="add" class="md-fab md-fab-bottom-right" ng-show="(selectedIndex == 1) && (divesession.id != null)">
-                <md-icon icon="add" md-font-set="material-icons" ng-click="showDiveDetail(null)">add</md-icon>
+            <md-button aria-label="add" class="md-fab md-fab-bottom-right" ng-show="(selectedIndex == 1) && (divesession.id != null)" ng-click="showDiveDetail(null)">
+                <md-icon icon="add" md-font-set="material-icons">add</md-icon>
             </md-button>
             <!--md-button aria-label="delete"  class="md-fab">
                <md-icon icon="add" md-font-set="material-icons">delete</md-icon>
