Code cleaning, icon changed for dive and dive session

--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -3,7 +3,7 @@
         <!-- search engine indexing -->
         <title>appnea, the first social logbook for freediver </title>
         <meta name="description" content="appnea, the first social logbook for freediver. Store your performance and share them with your friends" />
-        <meta name="keywords" content="apnea, freediving, freediver, aida, apnea academy, ssi, immersioni, depth, pescasub, subacquea, profondità, logbook, registro, freediver logbook, freediving logbook, performance, prestazioni, aida logbook, aida registro, logbook freediver, logbook apnea, apnea logbook">
+        <meta name="keywords" content="apnea, freediving, freediver, aida, apnea academy, ssi, immersioni, depth, pescasub, subacquea, profondità, logbook, registro, freediver logbook, freediving logbook, performance, prestazioni, aida logbook, aida registro, logbook freediver, logbook apnea, apnea logbook, apnea logbook">
         <meta name="author" content="Gianluca Ragnoni" />
         <meta name="copyright" content="" />
         <meta http-equiv="Reply-to" content="freediving.logbook@gmail.com" />
@@ -34,10 +34,8 @@
         <!-- Angular Material Javascript now available via Google CDN; version 0.11.2 used here -->
         <script src="https://gitcdn.xyz/repo/angular/bower-material/v0.11.4/angular-material.js"></script>
         
-        <!-- Angular moment picker-->
-        <script src="assets/libs/moment-picker/moment-with-locales.js"></script>
-        <script src="assets/libs/moment-picker/angular-moment-picker_app-nea_patch.js"></script>
-        <link href="assets/libs/moment-picker/angular-moment-picker.min.css" rel="stylesheet">
+        <!-- Angular moment-->
+        <script src="assets/libs/moment/moment-with-locales.js"></script>
         
         <!--ngFacebook dependecy -->
         <script src="assets/libs/ng-facebook/ngFacebook.js"></script>
@@ -46,7 +44,7 @@
         <script src="src/app.js"></script> 
         <script src="src/shared/constant.js"></script>
         <script src="src/shared/helper.js"></script>
-        <script src="src/shared/service/facebook_service.js"></script>
+        <!--script src="src/shared/service/facebook_service.js"></script-->
         <script src="src/shared/service/freediver_service.js"></script>
         <script src="src/shared/service/model_service.js"></script>
         <script src="src/shared/model/model.js"></script>
