--- a/Server-side/war/webclient/src/dive/dive_detail_view.html
+++ b/Server-side/war/webclient/src/dive/dive_detail_view.html
@@ -11,8 +11,8 @@
                 <md-button aria-label="save" ng-disabled="diveForm.$invalid" class="md-icon-button" ng-click="saveDive()" >
                     <md-icon icon="done" md-font-set="material-icons">done</md-icon>
                 </md-button>
-                <md-button aria-label="delete"  ng-disabled="viewStatus == 0" class="md-icon-button">
-                   <md-icon icon="delete" md-font-set="material-icons" ng-click="showRemoveConfirmation()">delete</md-icon>
+                <md-button aria-label="delete"  ng-disabled="viewStatus == 0" class="md-icon-button" ng-click="showRemoveConfirmation()">
+                   <md-icon icon="delete" md-font-set="material-icons">delete</md-icon>
                 </md-button>
             </div>
             
