--- a/Server-side/war/webclient/src/divesession/divesession_list_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_list_view.html
@@ -65,13 +65,15 @@
                 <p>Please, use your facebook account to login into the platform.</p>
             </md-card-content-->
             <md-card-action>
-                <md-button ng-click="login()">
-                    <img src='assets/img/fb_login_button.png'>
-                </md-button>
+                <!--md-button ng-click="login()" aria-label="login fb button"-->
+                    <a href="">
+                        <img src='assets/img/fb_login_button.png' ng-click="login()">
+                    </a>
+                <!--/md-button-->
             </md-card-action>
             <img src="assets/img/before_login_en.jpg" class="md-card-image" alt="before login">
             <md-card-action>
-                <md-button ng-click="login()">
+                <md-button ng-click="login()" aria-label="login fb button">
                     <img src='assets/img/fb_login_button.png'>
                 </md-button>
             </md-card-action>
