Fix problem on facebook login

--- a/Server-side/war/webclient/src/divesession/divesession_list_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_list_view.html
@@ -73,9 +73,11 @@
             </md-card-action>
             <img src="assets/img/before_login_en.jpg" class="md-card-image" alt="before login">
             <md-card-action>
-                <md-button ng-click="login()" aria-label="login fb button">
-                    <img src='assets/img/fb_login_button.png'>
-                </md-button>
+                <!--md-button ng-click="login()" aria-label="login fb button"-->
+                     <a href="">
+                        <img src='assets/img/fb_login_button.png' ng-click="login()">
+                    </a>
+                <!--/md-button-->
             </md-card-action>
         </md-card>
             
