Build refactoring and chart optimization

--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -176,8 +176,13 @@
                 </md-list>
             </div>
             
-            <div>
+            <div layout="column" layout-align="center center">
                 <canvas id="line" class="chart chart-line" chart-data="data" chart-labels="labels" chart-legend="true" chart-series="series" chart-click="onClick"> 
+                </canvas> 
+            </div>
+            
+             <div layout="column" layout-align="center center">
+                <canvas id="line" class="chart chart-bar" chart-data="data" chart-labels="labels" chart-legend="true" chart-series="series" chart-click="onClick"> 
                 </canvas> 
             </div>
         </md-content>
