--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -49,6 +49,10 @@
         <script src="assets/libs/angular-chart/angular-chart.min.js"></script>
         <link rel="stylesheet" href="assets/libs/angular-chart/angular-chart.min.css">
         
+        <!--Zing chart dependency-->
+        <script src="http://cdn.zingchart.com/zingchart.min.js"></script>
+        <script src="assets/libs/zing-chart/zingchart-angularjs.js"></script>
+        
         <!-- app-nea source code reference -->    
         <script src="src/app.js"></script> 
         <script src="src/shared/constant.js"></script>
