continue working zing chart

--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -185,7 +185,7 @@
                 <canvas id="durationGraph" class="chart chart-bar" chart-data="dataDuration" chart-labels="labels" chart-legend="true" chart-series="seriesDuration"  chart-click="onClick"> 
                 </canvas> 
             </div-->
-            <div layout="column" layout-align="center center" zingchart id="myChart" zc-json="myJson" zc-height=500 zc-width=600></div>
+            <div layout="column" layout-align="center center" zingchart id="myChart" zc-json="myJson" zc-height="70%" zc-width="70%"></div>
         </md-content>
     </md-tab>
        
