Working on bubble chart height

--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -164,7 +164,9 @@
     <md-tab label="Statistics">
         <md-content layout-margin>
             
-            <div layout="column" layout-align="center center" zingchart id="myChart" zc-json="myJson" zc-height="70%" zc-width="70%"></div>
+            <div layout="column" layout-align="center center"> 
+                <zingchart style="display:block" id="myChart" zc-json="myJson" zc-height="400" zc-width="100%"></zingchart>
+            </div>
             
             <!--div layout="column" layout-align="center center">
                 <md-list>
