Chart almost completed but some error on production environment appear regarding zingchart

--- a/Server-side/war/webclient/src/divesession/divesession_detail_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_detail_view.html
@@ -162,7 +162,8 @@
         
         <!-- ************************STATISTICS ********************************** -->
     <md-tab label="Statistics">
-        <md-content layout-margin>
+        <!--show only if there are dives-->
+        <md-content ng-show="divesession.dives.length > 0" layout-margin>
             
             <div layout="column" layout-align="center center"> 
                 <zingchart style="display:block" id="myChart" zc-json="myJson" zc-height="400" zc-width="100%"></zingchart>
