--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -2,11 +2,11 @@
     <head>
         <!-- search engine indexing -->
         <title>appnea, the first social logbook for freediver </title>
-        <meta name="description" content="appnea, the first social logbook for freediver. Store your performance and share them with your friends" />
+        <meta name="description" content="appnea, the social logbook for freediver. Store your performance and share them with your friends" />
         <meta name="keywords" content="apnea, freediving, freediver, aida, apnea academy, ssi, immersioni, depth, pescasub, subacquea, profondità, logbook, registro, freediver logbook, freediving logbook, performance, prestazioni, aida logbook, aida registro, logbook freediver, logbook apnea, apnea logbook, apnea logbook">
         <meta name="author" content="Gianluca Ragnoni" />
-        <meta name="copyright" content="" />
-        <meta http-equiv="Reply-to" content="freediving.logbook@gmail.com" />
+        <meta name="copyright" content="Gianluca Ragnoni" />
+        <meta http-equiv="Reply-to" content="gianluca.ragnoni@gmail.com" />
         <meta http-equiv="content-language" content="EN,IT" />
         <meta http-equiv="Content-Type" content="text/html; iso-8859-1" />
         <meta charset="iso-8859-1" />
