Small bugfix on add dive session, SEO optimization

--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -8,15 +8,29 @@
 
 <html>
   <head>
+  	<title>Appnea: a freediver's logbook platform</title>
   	<meta name="viewport" content="width=device-width" content="initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Appnea: a freediver's logbook platform</title>
+    <meta name="description" content="appnea, the social logbook for freediver. Store your performance and share them with your friends" />
+    <meta name="keywords" content="apnea, freediving, freediver, aida, apnea academy, ssi, immersioni, depth, pescasub, subacquea, profondità, logbook, registro, freediver logbook, freediving logbook, performance, prestazioni, aida logbook, aida registro, logbook freediver, logbook apnea, apnea logbook, apnea logbook">
+    <meta name="author" content="Gianluca Ragnoni" />
+    <meta name="copyright" content="Gianluca Ragnoni" />
+    <meta http-equiv="Reply-to" content="gianluca.ragnoni@gmail.com" />
+    <meta http-equiv="content-language" content="EN,IT" />
+    <meta http-equiv="Content-Type" content="text/html; iso-8859-1" />
+    <meta charset="iso-8859-1" />
+    <meta name="robots" content="INDEX,FOLLOW" />
+    <meta name="creation_Date" content="01/05/2016" />
+    <meta name="revisit-after" content="7 days" />
+    <!-- SEO optimization -->
+    <meta name="google-site-verification" content="3xwHAFxF2j6zTg1IhMJBDX-CeRbff5AmY-smIeMytLQ" />
+  	<link rel="canonical" href="https://app-nea-it.appspot.com/" />
   </head>
-
+	
   <body>
 	
     <h1>Welcome to appnea platform</h1>
-	<h2>appnea is a social freediving logbook for freediver.
+	<h2>appnea is a social freediving logbook.
 <h2>Save your performance in the cloud and share it with your friends.</h2>
 <h2>Use your Facebook account to login.</h2>
     <table>
@@ -27,9 +41,14 @@
         <td><a href="https://docs.google.com/document/d/1R5_QRElu40hTb6ErLYQW1fbh7MSRgfpP-Fmz8yEmnk8/pub">App-nea rest API documentation</a></td>
       </tr>
       <tr>
-        <td><a href="/webclient/index.html">Appnea web client (beta)</a> Plaese <a href="mailto:gianluca.ragnoni@gmail.com">Contact me</a> if you want to try the client!</td>
+        <td><a href="/webclient/index.html">Appnea web client</a> Plaese <a href="mailto:gianluca.ragnoni@gmail.com">Contact me</a> if you want more info about the client!</td>
       </tr>
     </table>
+   
+   <!-- SEO Snippet enabled -->
+   <div vocab="http://schema.org/" typeof="SoftwareApplication">
+  	<span property="name">appnea freediving logbook</span>
+   </div>
    
 	
   </body>
