--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -1,7 +1,7 @@
 <html ng-app="appNeaClient">
     <head>
         <!-- search engine indexing -->
-        <title>appnea, the first social logbook for freediver </title>
+        <title>appnea, a social logbook for freediver </title>
         <meta name="description" content="appnea, the social logbook for freediver. Store your performance and share them with your friends" />
         <meta name="keywords" content="apnea, freediving, freediver, aida, apnea academy, ssi, immersioni, depth, pescasub, subacquea, profondità, logbook, registro, freediver logbook, freediving logbook, performance, prestazioni, aida logbook, aida registro, logbook freediver, logbook apnea, apnea logbook, apnea logbook">
         <meta name="author" content="Gianluca Ragnoni" />
@@ -13,6 +13,7 @@
         <meta name="robots" content="INDEX,FOLLOW" />
         <meta name="creation_Date" content="01/05/2016" />
         <meta name="revisit-after" content="7 days" />
+        <link rel="canonical" href="https://app-nea-it.appspot.com/" />
         
         <meta name="viewport" content="width=device-width" content="initial-scale=1" />
      
