Integrated communication between jsp for fb publication and angular.

--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -49,7 +49,7 @@
         <script src="assets/libs/zing-chart/zingchart-angularjs.js"></script>
         
         <!-- app-nea source code reference -->    
-        <script src="src/app.js"></script> 
+        <script src="src/appMain.js"></script> 
         <script src="src/shared/constant.js"></script>
         <script src="src/shared/helper.js"></script>
         <script src="src/shared/service/freediver_service.js"></script>
