quite completed FB integration

--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -11,8 +11,8 @@
   	<title>Appnea: a freediver's logbook platform</title>
   	<meta name="viewport" content="width=device-width" content="initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta name="description" content="appnea, the social logbook for freediver. Store your performance and share them with your friends" />
-    <meta name="keywords" content="apnea, freediving, freediver, aida, apnea academy, ssi, immersioni, depth, pescasub, subacquea, profondità, logbook, registro, freediver logbook, freediving logbook, performance, prestazioni, aida logbook, aida registro, logbook freediver, logbook apnea, apnea logbook, apnea logbook">
+    <meta name="description" content="appnea, the social apnea logbook for freediver. Store your performance and share them with your friends" />
+    <meta name="keywords" content="apnea, freediving, freediver, aida, apnea logbook, apnea academy, ssi, immersioni, depth, pescasub, subacquea, profondità, logbook, registro, freediver logbook, freediving logbook, performance, prestazioni, aida logbook, aida registro, logbook freediver, logbook apnea, apnea logbook, apnea logbook">
     <meta name="author" content="Gianluca Ragnoni" />
     <meta name="copyright" content="Gianluca Ragnoni" />
     <meta http-equiv="Reply-to" content="gianluca.ragnoni@gmail.com" />
@@ -30,8 +30,8 @@
   <body>
 	
     <h1>Welcome to appnea platform</h1>
-	<h2>appnea is a social freediving logbook.
-<h2>Save your performance in the cloud and share it with your friends.</h2>
+	<h2>appnea is a social freediving apnea logbook.
+<h2>Save your apnea performance in the logbook (hosted in the cloud) and share it with your friends.</h2>
 <h2>Use your Facebook account to login.</h2>
     <table>
       <tr>
@@ -47,7 +47,7 @@
    
    <!-- SEO Snippet enabled -->
    <div vocab="http://schema.org/" typeof="SoftwareApplication">
-  	<span property="name">appnea freediving logbook</span>
+  	<span property="name">apnea freediving logbook</span>
    </div>
    
 	
