--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -1,9 +1,9 @@
 <html ng-app="appNeaClient">
     <head>
         <!-- search engine indexing -->
-        <title>appnea, a social logbook for freediver </title>
+        <title>appnea, a social apnea logbook for freediver </title>
         <meta name="description" content="appnea, the social logbook for freediver. Store your performance and share them with your friends" />
-        <meta name="keywords" content="apnea, freediving, freediver, aida, apnea academy, ssi, immersioni, depth, pescasub, subacquea, profondità, logbook, registro, freediver logbook, freediving logbook, performance, prestazioni, aida logbook, aida registro, logbook freediver, logbook apnea, apnea logbook, apnea logbook">
+        <meta name="keywords" content="apnea, freediving, freediver, aida, apnea academy, ssi, immersioni, depth, pescasub, subacquea, profondità, logbook, registro, apnea logbook, freediver logbook, freediving logbook, performance, prestazioni, aida logbook, aida registro, logbook freediver, logbook apnea, apnea logbook, apnea logbook">
         <meta name="author" content="Gianluca Ragnoni" />
         <meta name="copyright" content="Gianluca Ragnoni" />
         <meta http-equiv="Reply-to" content="gianluca.ragnoni@gmail.com" />
