Icon height and width optimization for iphone5 support

--- a/Server-side/war/webclient/src/divesession/divesession_list_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_list_view.html
@@ -5,7 +5,9 @@
             <div ng-show="fbStatus != 0" style="height:48px; width:48px"></div>
             <md-button class="md-icon-button" ng-show="fbStatus == 0" aria-label="menu" ng-click="openLeftMenu()" >
                 <!--md-icon flex md-svg-src="assets/img/menu.svg"></md-icon-->
-                <md-icon flex md-font-set="material-icons">reorder</md-icon>
+                <!--md-icon flex md-font-set="material-icons">reorder</md-icon-->
+                <md-icon md-svg-src="assets/img/icon/ic_reorder_white_18px.svg" aria-label="reorder"></md-icon>
+               
 
             </md-button>
             <p>{{applicationName}}</p>
