--- a/Server-side/war/webclient/src/dive/dive_detail_view.html
+++ b/Server-side/war/webclient/src/dive/dive_detail_view.html
@@ -3,16 +3,19 @@
         <div class="md-toolbar-tools" layout-align="space-between end">
             <md-button class="md-icon-button" ng-show="fbStatus == 0" aria-label="back" ng-click="back()" >
                     <!--md-icon flex md-svg-src="assets/img/menu.svg"></md-icon-->
-                    <md-icon flex md-font-set="material-icons">arrow_back</md-icon>
+                    <!--md-icon flex md-font-set="material-icons">arrow_back</md-icon-->
+                    <md-icon md-svg-src="assets/img/icon/ic_arrow_back_white_18px.svg" aria-label="back"></md-icon>
 
             </md-button>
             <p>Dive</p>
             <div ng-show="fbStatus == 0">
                 <md-button aria-label="save" ng-disabled="diveForm.$invalid" class="md-icon-button" ng-click="saveDive()" >
-                    <md-icon icon="done" md-font-set="material-icons">done</md-icon>
+                    <!--md-icon icon="done" md-font-set="material-icons">done</md-icon-->
+                    <md-icon md-svg-src="assets/img/icon/ic_done_white_18px.svg" aria-label="done"></md-icon>
                 </md-button>
                 <md-button aria-label="delete"  ng-disabled="viewStatus == 0" class="md-icon-button" ng-click="showRemoveConfirmation()">
-                   <md-icon icon="delete" md-font-set="material-icons">delete</md-icon>
+                   <!--md-icon icon="delete" md-font-set="material-icons">delete</md-icon-->
+                    <md-icon md-svg-src="assets/img/icon/ic_delete_white_18px.svg" aria-label="delete"></md-icon>
                 </md-button>
             </div>
             
