added appnea landing link to jsp published page

--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -49,7 +49,7 @@
    <div vocab="http://schema.org/" typeof="SoftwareApplication">
   	<span property="name">apnea freediving logbook</span>
    </div>
-   
+   <a href="http://www.url.biz/Sports" target="_blank">URL.biz</a> - <a href="http://www.url.biz/Sports/Software" target="_blank">Software</a>
 	
   </body>
   <!--  google analytics -->
