Fix github link in the landing page

--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -659,7 +659,7 @@
                     <div class="section_title">
                         <h2>Get in touch</h2>
                         <p>For more informations plaese <a href="mailto:gianluca.ragnoni@gmail.com">Contact me</a>! </p>
-                        <p>Please report issue <a href="github.com/jointheflow/Freediving-Logbook/issues">here</a> </p>
+                        <p>Please report issue <a href="https://github.com/jointheflow/Freediving-Logbook/issues">here</a> </p>
                     </div>
                 </div>
             </div>
