Custom field management on client side

--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -66,6 +66,7 @@
         <script src="src/sidenav/sidenav_controller.js"></script>
         <script src="src/shared/controller/root_controller.js"></script>
         <script src="src/dialogalert/dialogalert_service.js"></script>
+        <script src="src/setting/setting_controller.js"></script>
 
     </head>
 
