--- a/Server-side/war/webclient/src/sidenav/sidenav_view.html
+++ b/Server-side/war/webclient/src/sidenav/sidenav_view.html
@@ -4,6 +4,9 @@
             <p>User: {{freediver.username}}</p>
         </md-list-item>
         <md-list-item ng-show="fbStatus == 0">
+            <md-button ng-click="setting()">Setting</md-button>
+        </md-list-item>
+        <md-list-item ng-show="fbStatus == 0">
             <md-button ng-click="logout()">Logout</md-button>
         </md-list-item>
     </md-list>
