--- a/Server-side/war/webclient/src/sidenav/sidenav_view.html
+++ b/Server-side/war/webclient/src/sidenav/sidenav_view.html
@@ -4,7 +4,7 @@
             <p>User: {{freediver.username}}</p>
         </md-list-item>
         <md-list-item ng-show="fbStatus == 0">
-            <md-button ng-click="setting()">Setting</md-button>
+            <md-button ng-click="setting()">Settings</md-button>
         </md-list-item>
         <md-list-item ng-show="fbStatus == 0">
             <md-button ng-click="logout()">Logout</md-button>
