Custom field management completed dialog for adding and remove field

--- a/Server-side/war/webclient/src/dialogalert/dialogalert_view.html
+++ b/Server-side/war/webclient/src/dialogalert/dialogalert_view.html
@@ -15,6 +15,7 @@
         <p>
           <label>{{detail}}</label>
         </p>
+       </div>
     </md-dialog-content>
     <md-dialog-actions layout="row">
       <md-button ng-click="close()">
